c4prj2_input/grade.txt
Grading at Sun Aug  2 13:36:27 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:55:12: error: ‘lin_ind’ undeclared (first use in this function)
        if(*lin_ind==32)
            ^
input.c:55:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
